fix image aspect ratios on mobile
CSS height: auto overrides fixed height="600px" HTML attributes, preventing image distortion on small screens.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -272,6 +272,8 @@ pre code.hljs {
 		display: block;
 		margin: auto;
 		width: 90%;
+		height: auto;
+		max-width: 100%;
 	}
 	/*
 	*	Posts
